--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -24,8 +24,9 @@
 }
 
 .foot-div{
-  position: relative;
-  top: 1000%;
+  position: absolute;
+  top: 97%;
+  left: 65%;
 }
 
 input.mat-input-element{
@@ -125,4 +126,22 @@ cursor: pointer;
 
 .button-row {
   width: 100%;
+}
+
+@media (min-width: 1350px) and (max-width: 1600px){
+  .foot-div{
+    left: 53%;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1349px){
+  .foot-div{
+    left: 45%;
+  }
+}
+
+@media (max-width: 1200px){
+  .foot-div{
+    left: 30%;
+  }
 }
