--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -53,7 +53,7 @@
         <div *ngIf="client.nombre === undefined" fxLayout="row wrap">
           <div style="display: flex; width: 100%"></div>
             <mat-form-field fxFlex.gt-sm="80" fxFlex="80" (click)="stateStep = 'clientList'">
-              <input matInput [(ngModel)]="currentSearchProduct" placeholder="Seleccionar Cliente" (keyup)="validateSearchProduct()" (keyup.enter)="searchProduct(currentSearchProduct)" >
+              <input matInput placeholder="Seleccionar Cliente">
             </mat-form-field>
             <button id= "btn-add-person" mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>
           </div>
