fixes esteticos / funcionales

--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -137,7 +137,10 @@ cursor: pointer;
   font-size: 10px;
   font-weight: 500;
   flex: auto;
-  text-align: center;
+  //text-align: center;
+
+  display: flex;
+  justify-content: center;
 }
 
 mat-cell, mat-footer-cell, mat-header-cell {
