--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -56,9 +56,9 @@
               <input matInput [(ngModel)]="currentSearchProduct" placeholder="Seleccionar Cliente" (keyup)="validateSearchProduct()" (keyup.enter)="searchProduct(currentSearchProduct)" >
             </mat-form-field>
             <button id= "btn-add-person" mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>-->
-            <mat-form-field>
-              <input matInput [(ngModel)]="currentSearchProduct" placeholder="Seleccionar Cliente" [type]="hide ? 'password' : 'text'">
-              <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            <mat-form-field (click)="stateStep = 'clientList'">
+              <input matInput [(ngModel)]="currentSearchProduct" placeholder="Seleccionar Cliente" (keyup)="validateSearchProduct()" (keyup.enter)="searchProduct(currentSearchProduct)">
+              <mat-icon (click)="stateStep = 'clientUpdate'" matSuffix color= "primary" style="cursor: pointer;">person_add</mat-icon>
             </mat-form-field>
 
 
@@ -110,7 +110,7 @@
                 <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Quitar:</span>
-                  <a (click)="deleteProductosDetalles(i, row)" class="ng-star-inserted">
+                  <a (click)="deleteProductosDetalles(i, row)" class="ng-star-inserted" style="cursor: pointer;">
                     <i class="ti-trash text-danger m-r-10"></i>
                   </a>
                 </mat-cell>
@@ -158,7 +158,7 @@
 
     <div class="button-row">
       <button mat-raised-button style="background-color: #1ab394; color: white; border-radius: initial; width:72%" [disabled]="client.id === undefined || entity.productoDetalles.length === 0 || entity.montoTotal < 1" (click)="addExtraInfoSell()">Vender</button>
-      <button mat-raised-button style="width:28%; border-radius: initial;"(click)="previousState()">Cancelar</button>
+      <button mat-raised-button style="width:28%; border-radius: initial;" (click)="refreshSell()">Cancelar</button>
     </div>
   </mat-card>
 
@@ -182,7 +182,7 @@
         <div fxLayout="row wrap">
           <div class="p-10">
             <div class="button-row">
-              <button mat-icon-button (click)="goStep('clientUpdate', 'new', null)">Agregar nuevo cliente</button>
+              <button mat-raised-button (click)="goStep('clientUpdate', 'new', null)">Agregar nuevo cliente</button>
             </div>
           </div>
         </div>
@@ -276,7 +276,7 @@
         </mat-form-field>
 
         <mat-form-field  fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" appearance="outline">
-          <input matInput [(ngModel)]="client.telefono"  type="text" maxlength="11" (keypress)="checkNumbersOnly($event)" placeholder="Teléfono">
+            <input matInput [(ngModel)]="client.telefono"  type="text" maxlength="11" (keypress)="checkNumbersOnly($event)" placeholder="Teléfono">
         </mat-form-field>
       </div>
 
@@ -307,8 +307,8 @@
       <div fxLayout="row wrap">
         <div class="p-10">
           <div class="button-row">
-            <button mat-raised-button  (click)="goStep('clientList', null, null)">Cancelar</button>
             <button mat-raised-button (click)="saveClient()">Guardar</button>
+            <button mat-raised-button  (click)="goStep('clientList', null, null)">Cancelar</button>
           </div>
         </div>
       </div>
