fixes indicados en la revision anterior (funcionalidad)

--- a/frontend/src/app/contact/client/client-update.component.html
+++ b/frontend/src/app/contact/client/client-update.component.html
@@ -30,9 +30,10 @@
 
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Documento" name="codigo" [(ngModel)]="entity.codigo" [formControl]="form.controls['fcodigo']">
+                <input matInput placeholder="Documento" name="codigo" [(ngModel)]="entity.codigo" [formControl]="form.controls['fcodigo']" (keyup)="validateClient()">
               </mat-form-field>
               <mat-hint *ngIf="form.controls['fcodigo'].hasError('maxlength') && form.controls['fcodigo'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
+              <mat-hint *ngIf="clientRepeated" class="text-danger font-14">DNI ya existente</mat-hint>
             </div>
 
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
