--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -48,7 +48,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="35" fxFlex.gt-md="35" fxFlex.gt-sm="35" fxFlex="100">
+  <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="40" fxFlex.gt-md=40 fxFlex.gt-sm=40 fxFlex="100">
     <mat-card-content>
         <div *ngIf="client.nombre === undefined" fxLayout="row wrap">
           <div style="display: flex; width: 100%"></div>
@@ -70,9 +70,9 @@
             </mat-form-field>
             <button mat-icon-button color= "primary" (click)="removeCliente()"><mat-icon>delete</mat-icon></button>
           </div>
-      <form class="basic-form">
+      <form class="basic-form" style="height:100%">
         <!--<div fxLayout="row wrap">-->
-          <div class="responsive-table">
+          <div class="responsive-table" style="height:100%">
             <mat-table #table matSort [dataSource]="dataSourceProductosDetalles" class="mat-elevation-z8">
 
               <ng-container matColumnDef="cantidad">
@@ -182,7 +182,7 @@
         <div fxLayout="row wrap">
           <div class="p-10">
             <div class="button-row">
-              <button mat-raised-button (click)="goStep('clientUpdate', 'new', null)">Agregar nuevo cliente</button>
+              <button mat-raised-button style="width: 100%;" (click)="goStep('clientUpdate', 'new', null)">Agregar nuevo cliente</button>
             </div>
           </div>
         </div>
@@ -306,9 +306,13 @@
 
       <div fxLayout="row wrap">
         <div class="p-10">
-          <div class="button-row">
+          <!--<div class="button-row">
             <button mat-raised-button (click)="saveClient()">Guardar</button>
             <button mat-raised-button  (click)="goStep('clientList', null, null)">Cancelar</button>
+          </div>-->
+          <div class="button-row">
+            <button mat-raised-button style="background-color: #1ab394; color: white; border-radius: initial; width:72%" (click)="saveClient()">Guardar</button>
+            <button mat-raised-button style="width:28%; border-radius: initial;" (click)="goStep('clientList', null, null)">Cancelar</button>
           </div>
         </div>
       </div>
