--- a/frontend/src/app/ventas/sell/sell.component.scss
+++ b/frontend/src/app/ventas/sell/sell.component.scss
@@ -39,3 +39,21 @@ input.mat-input-element{
 #newSection {
   text-align: right;
 }
+
+.mat-header-row.mat-header-row.ng-star-inserted{
+  background-color: #eee;
+}
+
+.mat-row.mat-row.ng-star-inserted:hover,
+.mat-row.mat-row.ng-star-inserted:focus{
+  background-color: #eaeaea
+}
+
+.mat-chip{
+  font-size: 14px;
+  font-weight: 400;
+  color: #ffffff;
+  border-radius: 5px;
+  width: 100px;
+  text-align: center;
+}
