--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -35,7 +35,7 @@
         <div fxFlex.gt-lg="25" fxFlex.gt-md="25" fxFlex.gt-xs="25" fxFlex="100" *ngFor="let product of productos ">
           <mat-card class="oh" (click)="openDialogVariantSelection(product)">
               <h6 class="m-0">S/. {{product.precioVenta}}</h6>
-            <img mat-card-image [src]="product.imagen ? 'data:' + product.imagenContentType + ';base64,' + product.imagen : 'assets/images/big/img1.jpg'" alt="Photo of a Shiba Inu">
+            <img mat-card-image [src]="product.imagen ? 'data:' + product.imagenContentType + ';base64,' + product.imagen : 'assets/images/big/no_product1.png'" alt="Photo of a Shiba Inu">
               <!--<h6 class="m-0">stock: {{product.stock}}</h6>-->
               <h6 class="m-0">{{product.stock}}</h6>
               <small>{{product.nombre}}</small>
@@ -197,7 +197,7 @@
 
               <ng-container matColumnDef="name">
                 <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
-                <mat-cell style="cursor:pointer" *matCellDef="let row;let i = index" (click)="setClient(row)">
+                <mat-cell style="cursor:pointer; width: 50%" *matCellDef="let row;let i = index" (click)="setClient(row)">
                   <span class="header-label">Nombre</span>
                   {{row.nombre}}
                   <br>
@@ -209,7 +209,7 @@
                 <mat-header-cell *matHeaderCellDef> Editar </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Editar:</span>
-                  <a style="cursor:pointer" (click)="goStep('clientUpdate', 'edit', row)" class="ng-star-inserted">
+                  <a style="cursor:pointer; width: 50%" (click)="goStep('clientUpdate', 'edit', row)" class="ng-star-inserted">
                     <i class="ti-pencil text-info m-r-10"></i>
                   </a>
                 </mat-cell>
